# prinnotter

./: Makefile  README.md  docker-compose.yaml  docker-compose.yml  heroku.yaml  heroku.yml
.github/workflows/: innotter_ci.yaml  test_on_push.yaml
InnotterDjango/: .env.example  Dockerfile  celery-entrypoint.sh  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
InnotterDjango/InnotterDjango/: __init__.py  asgi.py  aws_clients.py  aws_metaclass.py  aws_s3_client.py  aws_ses_client.py  celery.py  exceptions.py  services.py  settings.py  tasks.py  urls.py  wsgi.py
InnotterDjango/auth/: apps.py  middleware.py  serializers.py  urls.py  views.py
InnotterDjango/blog/: admin.py  apps.py  exceptions.py  managers.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
InnotterDjango/blog/migrations/: 0001_initial.py
InnotterDjango/innotter/: apps.py
InnotterDjango/jwt_auth/: apps.py  middleware.py  serializers.py  services.py  urls.py  views.py
InnotterDjango/tests/: conftest.py
InnotterDjango/tests/auth_tests/: conftest.py  test_middlewares.py  test_serializers.py  test_services.py  test_views.py
InnotterDjango/tests/blog_tests/: conftest.py  test_managers.py  test_models.py  test_permissions.py  test_services.py  test_views.py
InnotterDjango/tests/test_config/: test_aws_meta.py  test_aws_s3.py  test_aws_ses.py  test_services.py  test_settings.py  test_tasks.py
InnotterDjango/tests/user_tests/: conftest.py  test_models.py  test_permissions.py  test_serializers.py  test_serilizers.py  test_services.py  test_view.py  test_views.py
InnotterDjango/user/: admin.py  apps.py  managers.py  middleware.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
InnotterDjango/user/migrations/: 0001_initial.py  0002_user_is_verified.py  0003_remove_user_image_s3_path_user_image.py
