[tool.poetry]
name = "innotterdjango"
version = "0.1.0"
description = "Innowise Trainee task"
authors = ["Ilya Savin <ilya.savin@innowise-group.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
pytest = "^7.1.2"
pytest-django = "^4.5.2"
djangorestframework = "^3.13.1"
Markdown = "^3.3.7"
django-filter = "^22.1"
python-dotenv = "^0.20.0"
psycopg2 = "^2.9.3"
PyJWT = "^2.4.0"
drf-extensions = "^0.7.1"
pytest-cov = "^3.0.0"
pytest-mock = "^3.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
